need to fix bug. subcategory and date are resetting after speech finishes

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 }
 
 body {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(./assets/backgroundimage.jpeg);
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./assets/backgroundimage.jpeg);
     background-size: cover;
+    background-position: center;
+    image-rendering: -webkit-optimize-contrast;
 }
